[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "CAL-1.0"
homepage = "https://github.com/rainlanguage/router"
repository = "https://github.com/rainlanguage/router"

[workspace.dependencies]
regex = "1.10.2"
anyhow = "1.0.75"
once_cell = "1.18.0"
serde_json = "1.0.116"
futures = "0.3.30"
reqwest = "0.11.20"
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.59"
alloy-primitives = "0.7.1"
alloy-sol-types = "0.7.1"
alloy-dyn-abi = "0.7.1"
