[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "CAL-1.0"
homepage = "https://github.com/rainlanguage/router"
repository = "https://github.com/rainlanguage/router"

[workspace.dependencies]
regex = "1.10.2"
anyhow = "1.0.75"
once_cell = "1.18.0"
serde_json = "1.0.116"
futures = "0.3.30"
reqwest = "0.11.20"
tokio = { version = "1.37.0", features = ["full"] }
thiserror = "1.0.59"
alloy-primitives = "0.6.3"
alloy-sol-types = "0.6.3"
alloy-dyn-abi = "0.6.3"
alloy-ethers-typecast = { git = "https://github.com/rainlanguage/alloy-ethers-typecast", rev = "a33deb22e4060135bab97dd3c7b938c177e61ddb" }
